# rs_kue

./: Cargo.toml  README.md
src/: adapter.rs  engine.rs  error.rs  lib.rs  options.rs  task.rs  task_options.rs
src/loggers/: logger.rs  mod.rs  sillent.rs
src/tests/: mod.rs
src/tests/integrations/: mod.rs  tn.rs
src/tests/triangular_number/: adapter.rs  mod.rs  task.rs
